Completed: Swagger & backend basic
